makefile add comment for connect db

--- a/second-step-web_app/Makefile
+++ b/second-step-web_app/Makefile
@@ -4,6 +4,7 @@ at-first:
 
 start-db:
 	docker-compose -f ./docker/docker-compose.postgres.yml up -d
+	# access -> docker exec -it postgres-one psql -d app_db -U app_user
 
 end-db:
 	docker-compose -f ./docker/docker-compose.postgres.yml down
